# FRIEND

./: .gitignore  CMakeLists.txt  README.md
Configurations/: AArch64_armv8arm_k.xml  AR_VMSA_armv7arm_C.xml  mips.xml  x86_64.xml
FRIEND/: AArch32Extender.cpp  AArch32Extender.hpp  AArch64Extender.cpp  AArch64Extender.hpp  Documentation.cpp  Documentation.hpp  FRIEND.cpp  FunctionSummary.cpp  FunctionSummary.hpp  IDAAPI.hpp  PluginDelegate.hpp  ProcExtender.hpp  Settings.cpp  Settings.hpp
FRIEND/FRIEND.xcodeproj/: project.pbxproj
HintEditor/Dependencies/AEXML.framework/Versions/A/: AEXML
HintEditor/Dependencies/AEXML.framework/Versions/A/Headers/: AEXML-Swift.h
HintEditor/Dependencies/AEXML.framework/Versions/A/Modules/: module.modulemap
HintEditor/Dependencies/AEXML.framework/Versions/A/Modules/AEXML.swiftmodule/: arm64-apple-macos.swiftdoc  arm64.swiftmodule  x86_64-apple-macos.swiftdoc  x86_64-apple-macos.swiftmodule  x86_64.swiftdoc  x86_64.swiftmodule
HintEditor/Dependencies/AEXML.framework/Versions/A/Modules/AEXML.swiftmodule/Project/: arm64-apple-macos.swiftsourceinfo  x86_64.swiftsourceinfo
HintEditor/Dependencies/AEXML.framework/Versions/A/Resources/: Info.plist
HintEditor/Dependencies/AEXML.framework/Versions/A/_CodeSignature/: CodeResources
HintEditor/HintEditor/: AppDelegate.swift  CMakeLists.txt  HintEditor-Bridging-Header.h  Info.plist  ViewController.swift
HintEditor/HintEditor.xcodeproj/: project.pbxproj
HintEditor/HintEditor/storyboards/: Main.storyboard
Patches/: aexml.diff  capstone.diff
cmake/: FindIdaSdk.cmake
